[package]
name = "dfint_hook"
version = "0.1.3"
edition = "2021"

[lib]
name = "dfint_hook"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
macro = { path = "src/macro" }
raw = { path = "src/raw" }

retour = { version = "0.3.1", features = ["static-detour"] }
log = "0.4.22"
simple-logging = "2.0.2"
regex = "1.10.6"
backtrace = "0.3.74"
serde = { version = "1.0.210", features = ["derive"] }
static_init = "1.0.3"
anyhow = "1.0.89"
device_query = "2.1.0"
sdl2 = "0.37.0"
fontdue = "0.9.2"
bitflags = "2.6.0"
csv = "1.3.0"
indexmap = "2.5.0"

[target.'cfg(target_os = "windows")'.dependencies]
exe = "0.5.6"
winapi = { version = "^0.3.9", features = [
  "minwindef",
  "winnt",
  "libloaderapi",
  "windef",
  "winuser",
] }

[target.'cfg(target_os = "linux")'.dependencies]
checksum = "0.2.1"

[features]
steam = []
